# IzoClone

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Processors/: AllProcessors.h  CompressorProcessor.cpp  EQProcessor.cpp  EQProcessor.h  ExciterProcessor.cpp  LimiterProcessor.cpp  LimiterProcessor.h  MeterAndFFT.cpp  StereoImagerProcessor.cpp
Source/UI/: CompressorModule.h  EQModule.h  ExciterModule.h  LimiterModule.h  LookAndFeel.cpp  LookAndFeel.h  MainToolbar.h  MeterModule.h  PresetBar.h  StereoModule.h
Source/Utils/: PresetManager.cpp  PresetManager.h
installer/: IzoClone.nsi  generate_selfsigned_cert.ps1
